Fixed vertical alignment for check boxes and radio buttons

--- a/app/assets/stylesheets/base/normalize.scss
+++ b/app/assets/stylesheets/base/normalize.scss
@@ -228,7 +228,7 @@ button, html input[type="button"], input[type="reset"], input[type="submit"] {
 // Override previously set alignment
 input[type="checkbox"], input[type="radio"] {
   padding: 0;
-  top: 0.143em;
+  //top: 0.143em;
   position: relative;
   vertical-align: baseline;
 }
